--- a/assets/scss/header.scss
+++ b/assets/scss/header.scss
@@ -23,6 +23,7 @@ div#mini-head{
                 display: flex;
                 justify-content: flex-start;
                 .open-nav{
+                    display: none;
                     position: absolute;
                     top:0;
                     left: 0;
@@ -78,6 +79,15 @@ div#mini-head{
                 .search{
                     width: 40px;
                     height: 40px;
+                    input{
+                        display: none;
+                        border: solid  1px rgb(230, 230, 230);
+                        border-radius: 0px;
+                        &::placeholder{
+                            font-size: 12px;
+                            padding: 0 10px;
+                        }
+                    }
                 }
                 .search-active{
                     display: none;
@@ -100,6 +110,130 @@ div#mini-head{
                 .login{
                     width: 40px;
                     height: 40px;
+                    position: relative;
+                    .mini-login-drop{
+                        display: none;
+                        width: 180px;
+                        height: max-content;
+                        padding: 10px 15px;
+                        border: solid 1px rgb(230, 230, 230);
+                        box-shadow: 0px 0px 7px rgba(128, 128, 128, 0.2);
+                        background-color: white;
+                        position: absolute;
+                        right: 0;
+                        .login-register{
+                            border-bottom: solid 1px rgb(230, 230, 230);
+                            padding-bottom: 15px;
+                            ul{
+                                list-style: none;
+                                padding: 0;
+                                margin: 0;
+                                li{
+                                    line-height: 25px;
+                                    a{
+                                        color: #888;
+                                        font-size: 12px;
+                                        font-weight: 500;
+                                        padding: 5px 10px;
+                                        text-decoration: none;
+                                    }
+                                }
+                            }
+                        }
+                        .languages, .currency{
+                            padding-top: 10px;
+                            span{
+                                font-size: 14px;
+                                font-weight: 400;
+                            }
+                            ul{
+                                list-style: none;
+                                margin: 0;
+                                padding: 0 10px;
+                                li{
+                                    line-height: 25px;
+                                    a{
+                                        color: #888;
+                                        font-size: 12px;
+                                        font-weight: 500;
+                                        padding: 5px 10px;
+                                        text-decoration: none;
+                                    }
+                                }
+                            }
+                        }
+                    }
+                }
+                .mini-cart-drop{
+                    display: none;
+                    background-color: #ffffff;
+                    position: fixed;
+                    top:0;
+                    right: 0;
+                    width: 80%;
+                    height: 100vh;
+                    padding: 0 15px;
+                    border-left: solid  1px rgb(240, 240, 240);
+                    .top{
+                        display: flex;
+                        justify-content: space-between;
+                        align-items: center;
+                        font-size: 14px;
+                        font-weight: 400;
+                        border-bottom: solid  1px rgb(240, 240, 240);
+                        padding: 15px 0;
+                    }
+                    .mid{
+                        height: 40%;
+                        display: flex;
+                        align-items: center;
+                        justify-content: center;
+                        ul{
+                            margin: 0;
+                            padding: 0;
+                            list-style: none;
+                        }
+                    }
+                    .bottom{
+                        position: sticky;
+                        bottom: 0;
+                        height: 30%;
+                        width: 100%;
+                        ul{
+                            margin: 0;
+                            padding: 0;
+                            list-style: none;
+                            li{
+                                display: flex;
+                                justify-content: space-between;
+                            }
+                        }
+                        .buttons{
+                            width: 100%;
+                            display: flex;
+                            justify-content: space-between;
+                            button{
+                                padding: 5px 10px;
+                                border: none;
+                                color: white;
+                                width: 49%;
+                                background-color: #EB4D50;
+                                &:hover{
+                                    background-color: #232323;
+                                }
+                                &:nth-child(2){
+                                    background-color: #232323;
+                                    &:hover{
+                                        background-color: #EB4D50;
+                                    }
+                                }
+                                a{
+                                    text-decoration: none;
+                                    color: white;
+                                }
+                            }
+                        }
+                    }
                 }
                 .cart{
                     width: 40px;
@@ -432,8 +566,7 @@ header{
                             padding: 0;
                             margin: 0;
                             color: gray;
-                            li.when-empty{
-                                display: none;
+                            li.when-empty-cart{
                                 position: relative;
                                 top: 50%;
                                 justify-content: center;
@@ -467,7 +600,6 @@ header{
                     }
                     .cd-btm{
                         position: sticky;
-                        bottom: 0;
                         bottom: 0;
                         height: 30%;
                         width: 100%;
