--- a/assets/scss/homeStyle.scss
+++ b/assets/scss/homeStyle.scss
@@ -436,11 +436,33 @@ section#products{
                         width: 16%;
                     }
                 }
+                @media screen and (max-width:391px) {
+                    text-align: center;
+                    margin-top: 20px;
+                    h5{
+                        font-size: 14px;
+                        letter-spacing: 3px;
+                    }
+                    h1{
+                        font-size: 24px;
+                        &::after{
+                            border-top: 4px solid #eb4d4b;
+                            bottom: -20px;
+                            content: "";
+                            position: absolute;
+                            left: 42%;
+                            width: 16%;
+                        }
+                    }
+                }
             }
             p{
                 font-size: 14px;
                 color: gray;
                 letter-spacing: 1px;
+                @media screen and (max-width:391px) {
+                    text-align: center;
+                }
             }
             .about-list{
                 ul{
@@ -456,6 +478,9 @@ section#products{
                     &:nth-child(2){
                         margin-left: 30px;
                     }
+                    @media screen and (max-width:391px) {
+                        text-align: left;
+                    }
                 }
             }
             button{
@@ -469,6 +494,9 @@ section#products{
                 transition: 0.5s;
                 &:hover{
                     background-color: #232323;
+                }
+                @media screen and (max-width:391px) {
+                    transform: translateX(80%);
                 }
             }
         }
@@ -635,6 +663,9 @@ section#products{
                 }
             }
         }
+    }
+    @media screen and (max-width:391px) {
+        margin-bottom: 30px;
     }
 }
 
@@ -886,6 +917,10 @@ section#latest{
                     width: 7%;
                 }
             }
+            @media screen and (min-width:391px) and (max-width:821px) {
+                margin-bottom: 0px;
+                padding-bottom: 0px;
+            }
         }
         .owl-carousel .owl-nav button{
             color: white;
@@ -924,6 +959,16 @@ section#latest{
                     .active{
                         background-color: #f5f5f5!important;
                         color: #232323;
+                    }
+                }
+                @media screen and (max-width:391px) {
+                    justify-content: space-around;
+                    padding: 0 10px;
+                    li{
+                        margin: 0;
+                        a{
+                            padding: 0;
+                        }
                     }
                 }
             }
@@ -1013,6 +1058,12 @@ section#latest{
                               opacity: 0;
                             }
                         }
+                        @media screen and (min-width:391px) and (max-width:821px) {
+                            height: 230px;
+                        }
+                        @media screen and (max-width:391px) {
+                            height: 340px;
+                        }
                     }
                     &:hover .view{
                       transform: translateX(-60px);
@@ -1030,6 +1081,8 @@ section#latest{
                         padding: 10px;
                         h4{
                             font-size: 16px;
+                            margin-bottom: 10px;
+                            padding: 0;
                         }
                         p{
                             font-weight: 500;
@@ -1048,6 +1101,9 @@ section#latest{
                             font-weight: 400;
                             letter-spacing: 0.5px;
                             padding: 10px 21px;
+                            @media screen and (min-width:391px) and (max-width: 821px) {
+                                left: 24%;
+                            }
                         }
                     }
                 }
